@@ -1,3 +1,8 @@
+2004-03-01  Nathan Hurst <njh@mail.csse.monash.edu.au>
+
+	* src/draw-context.cpp fixed edge case in freehand tool.  added
+	comment about curve fitting.
+
 2004-03-01  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
 	* src/desktop-events.cpp (sp_dt_ruler_event): NR::Point'ification.
